=== master

* Fix handling of decimal values in the ado adapter when using locales where the decimal separator is , and not . (jeremyevans) (#1619)

=== 5.20.0 (2019-05-01)

* Fix reversing of alter_table add_foreign_key when :type option is used (jeremyevans) (#1615)

* Switch from using instance_exec to define_method for model associations and in some plugins (jeremyevans)

* Fix Database#server_version when using mysql2 adapter with mysql driver on MariaDB 10+ database (v-kolesnikov) (#1614)

* Make one_to_one setter method handle models that use joined datasets (jeremyevans) (#1612)

* Make auto_validations plugin work with the class_table_inheritance plugin (jeremyevans) (#1611)

* Avoid use of instance_exec for PlaceholderLiteralString#with_dataset (jeremyevans)

* Recognize float unsigned database types as float (keeguon, jeremyevans) (#1609)

* Support :savepoint options to Database#{after_commit,after_rollback} for making the hooks handle savepoints (jeremyevans)

* Avoid use of instance_exec in association_dependencies plugin (jeremyevans)

* Add pg_auto_constraint_validation_override to the pg_auto_constraint_validations plugin, for customizing columns and error message per constraint (jeremyevans)

* Make Database#check_constraints on PostgreSQL also include constraints where the related columns are not known (jeremyevans)

=== 5.19.0 (2019-04-02)

* Use more optimized approach to merging hashes in ruby 2.5+ (jeremyevans)

* Use SQLite extended result codes when using ruby-sqlite3 1.4.0+ (jeremyevans)

* Recognize additional SQLite extended result codes in the shared sqlite adapter (jeremyevans)

* Add Database#rename_enum_value to the pg_enum extension (AlexWayfer) (#1603)

* Make Database#drop_table delete constraint validations metadata for that table if using the constraint_validations extension (jeremyevans)

* Speed up row fetching in the sqlite adapter (jeremyevans)
