@@ -47,13 +47,13 @@ module Sequel
     #AdVarWChar         = 202
     #AdWChar            = 130
 
-    cp = Object.new
-
-    def cp.bigint(v)
+    bigint = Object.new
+    def bigint.call(v)
       v.to_i
     end
 
-    def cp.numeric(v)
+    numeric = Object.new
+    def numeric.call(v)
       if v.include?(',')
         BigDecimal(v.tr(',', '.'))
       else
@@ -61,24 +61,26 @@ module Sequel
       end
     end
 
-    def cp.binary(v)
+    binary = Object.new
+    def binary.call(v)
       Sequel.blob(v.pack('c*'))
     end
 
-    def cp.date(v)
+    date = Object.new
+    def date.call(v)
       Date.new(v.year, v.month, v.day)
     end
 
     CONVERSION_PROCS = {}
     [
-      [:bigint, AdBigInt],
-      [:numeric, AdNumeric, AdVarNumeric],
-      [:date, AdDBDate],
-      [:binary, AdBinary, AdVarBinary, AdLongVarBinary]
-    ].each do |meth, *types|
-      method = cp.method(meth)
+      [bigint, AdBigInt],
+      [numeric, AdNumeric, AdVarNumeric],
+      [date, AdDBDate],
+      [binary, AdBinary, AdVarBinary, AdLongVarBinary]
+    ].each do |callable, *types|
+      callable.freeze
       types.each do |i|
-        CONVERSION_PROCS[i] = method
+        CONVERSION_PROCS[i] = callable
       end
     end
     CONVERSION_PROCS.freeze
@@ -259,7 +261,7 @@ module Sequel
 
             cols.each do |name, cp, index|
               h[name] = if (v = field_values[index]) && cp
-                cp[v]
+                cp.call(v)
               else
                 v
               end
